# star

./: .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yml
.github/: release-drafter.yml
.github/workflows/: docker-image.yml  release-drafter.yml  release-please.yml  rust.yml
src/: config.rs  main.rs
src/client/: discord.rs  handler.rs  mod.rs
src/feature/: expand_link.rs  health_check.rs  mod.rs  model.rs
src/service/: message.rs  ready.rs
