[package]
name = "star"
version = "1.2.0"
edition = "2021"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
regex = "1.7.0"
typed-builder = { version = "0.18.2" }
log = "0.4.21"
env_logger = "0.11.3"
moka = { version = "0.12.7", features = ["future"] }
